--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -251,6 +251,9 @@
 		padding: 10px 10px 10px 10px;
 		width: 100%;
 		z-index: 5;
+		&._active{
+			z-index: 0;
+		}
 		@media (max-width: 998px) {
 			flex: 0 0 316px;
 		}
@@ -959,6 +962,7 @@
 	visibility: hidden;
 }
 .item-interact-wallet._active {
+
 	background: rgb(164, 247, 232);
 	grid-area: wallet;
 	opacity: 1;
@@ -1392,21 +1396,47 @@
 		font-weight: 700;
 		line-height: 12px;
 		text-transform: capitalize;
+		color: #000;
+		position: relative;
+		&::after{
+			content: '';
+			width: 0%;
+			height: 1px;
+			background-color: #000;
+			position: absolute;
+			left: 0;
+			bottom: -7px;
+			transition: $defaultTrans;
+		}
+		&:hover{
+			&::after{
+				width: 100%;
+			}
+		}
 	}
 
 	&__social {
 		display: flex;
 		column-gap: 30px;
-		margin-top: 10px;
+		margin-top: 5px;
 	}
-
-	&__in {
-		font-size: 18px;
+	&__icon{
+		font-size: 20px;
+		&::before{
+			padding: 8px;
+			transition: $defaultTrans;
+			border-radius: 50%;
+		}
+		&:hover{
+			&::before{
+				
+				color: #fff;
+				background-color: #000;
+				
+			}
+		}
 	}
-
-	&__twitter {
-		font-size: 18px;
-	}
+	
 }
 
 
